--- a/azure/environments/dev/terraform.tfvars.liquid
+++ b/azure/environments/dev/terraform.tfvars.liquid
@@ -1,5 +1,5 @@
 ####################### Common Variables #######################
-subscription_id            = "{{ subscriptionId }}"
+subscription_id            = "{{ azure_subscription_id }}"
 project_name               = "{{ project_name }}"
 environment                = "{{ environment }}"
 location                   = "{{ azure_location }}"
