--- a/azure/modules/sql_server/outputs.tf.liquid
+++ b/azure/modules/sql_server/outputs.tf.liquid
@@ -25,18 +25,18 @@ output "sql_database_name" {
 
 output "sql_admin_username" {
   description = "The administrator username for the SQL Server"
-  value       = sql_admin_username
+  value       = var.sql_admin_username
   sensitive   = false
 }
 
 output "sql_admin_password" {
   description = "The administrator password for the SQL Server"
-  value       = sql_admin_password != null ? sql_admin_password : random_password.sql_admin_password[0].result
+  value       = var.sql_admin_password != null ? var.sql_admin_password : random_password.sql_admin_password[0].result
   sensitive   = true
 }
 
 output "connection_string" {
   description = "Connection string for the SQL Database"
-  value       = "Server=tcp:${azurerm_mssql_server.sql_server.fully_qualified_domain_name},1433;Initial Catalog=${azurerm_mssql_database.sql_database.name};Persist Security Info=False;User ID=${sql_admin_username};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  value       = "Server=tcp:${azurerm_mssql_server.sql_server.fully_qualified_domain_name},1433;Initial Catalog=${azurerm_mssql_database.sql_database.name};Persist Security Info=False;User ID=${var.sql_admin_username};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   sensitive   = true
 }
