--- a/azure/modules/vpn_gateway/main.tf.liquid
+++ b/azure/modules/vpn_gateway/main.tf.liquid
@@ -15,7 +15,7 @@ resource "azurerm_public_ip" "vpn_gateway_ip" {
   sku                 = "Standard"
   zones               = var.availability_zones
 
-  tags = merge(tags, {
+  tags = merge(var.tags, {
     Name = "{{ project_name }}-{{ environment }}-vpn-gateway-ip"
   })
 }
@@ -48,7 +48,7 @@ resource "azurerm_virtual_network_gateway" "vpn_gateway" {
     vpn_client_protocols  = ["OpenVPN"]
   }
 
-  tags = merge(tags, {
+  tags = merge(var.tags, {
     Name = "{{ project_name }}-{{ environment }}-vpn-gateway"
   })
 
@@ -90,7 +90,7 @@ resource "azurerm_route_table" "vpn_route_table" {
     next_hop_type  = "VnetLocal"
   }
 
-  tags = merge(tags, {
+  tags = merge(var.tags, {
     Name = "{{ project_name }}-{{ environment }}-vpn-routes"
   })
 }
