--- a/azure/modules/vpn_gateway/outputs.tf.liquid
+++ b/azure/modules/vpn_gateway/outputs.tf.liquid
@@ -35,5 +35,5 @@ output "frontend_private_subnet_address_prefix" {
 
 output "vpn_client_address_space" {
   description = "The address space for VPN clients"
-  value       = vpn_client_address_space
+  value       = var.vpn_client_address_space
 }
