--- a/azure/environments/dev/main.tf.liquid
+++ b/azure/environments/dev/main.tf.liquid
@@ -158,3 +158,20 @@ module "ai_foundry" {
 
   tags = var.tags
  }
+
+module "gitops" {
+    source       = "./modules/gitops"
+    name         = var.project_name
+    environment  = var.environment
+    github_token = var.github_access_token
+    github_owner = var.github_owner
+}
+
+module "repository" {
+     source       = "./modules/code-repository"
+     name         = var.project_name
+     appType      = var.appType
+     environment  = var.environment
+     github_token = var.github_access_token 
+     github_owner = var.github_owner
+}
