--- a/azure/environments/dev/variables.tf.liquid
+++ b/azure/environments/dev/variables.tf.liquid
@@ -265,3 +265,20 @@ variable "embedding_capacity" {
   type        = number
   default     = {% if embedding_capacity %}{{ embedding_capacity | json }}{% else %}50{% endif %}
 }
+
+####################### version control variables #######################
+
+variable "github_access_token" {
+  description = "The github access token"
+  type        = string
+}
+
+variable "github_owner" {
+  description = "The github owner"
+  type        = string
+}
+
+variable "appType" {
+   description = "List of app names"
+   type        = list(string)
+ }
