--- a/azure/environments/dev/terraform.tfvars.liquid
+++ b/azure/environments/dev/terraform.tfvars.liquid
@@ -55,3 +55,7 @@ source_bastion_ip = [ "27.107.44.50/32", "58.84.60.45/32", "58.84.62.238/32" ]
 github_access_token = "{{ github_access_token }}"
 github_owner = "{{ github_owner }}"
 appType = ["{{ frontend_app_type }}", "{{ backend_app_type }}", "keycloak-service", "auth-service", "gen-ai-service"]
+
+####################### ACR Variables #######################
+
+acr_repo_names = ["myreact", "mynodeexpress", "mykeycloakservice", "myauthservice", "mygenaiservice"]
