--- a/azure/environments/dev/variables.tf.liquid
+++ b/azure/environments/dev/variables.tf.liquid
@@ -46,6 +46,12 @@ variable "common_resource_group_name" {
   type        = string
 }
 
+variable "acr_repo_names" {
+  description = "List of ACR registry names to create"
+  type        = list(string)
+  default     = []
+}
+
 ####################### sql server variables #######################
 
 variable "sql_location" {
