--- a/common-modules/common/providers.tf.liquid
+++ b/common-modules/common/providers.tf.liquid
@@ -4,11 +4,11 @@ terraform {
         {% if cloud_provider == 'aws' %}
         aws = {
             source = "hashicorp/aws"
-            version = "{{ aws_provider_version }}"
+            version = "5.58.0"
         }
         helm = {
             source  = "hashicorp/helm"
-            version = 2.17.0
+            version = "2.17.0"
         }
         {% endif %}
 
